--- a/svelte-kit-spike/src/app.html
+++ b/svelte-kit-spike/src/app.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang='en'>
+<head>
+	<meta charset='utf-8' />
+	<link rel='icon' href='/favicon.png' />
+	<meta name='viewport' content='width=device-width, initial-scale=1' />
+	<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css' rel='stylesheet'
+				integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' crossorigin='anonymous'>
+	%svelte.head%
 
-		%svelte.head%
-	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
-	</body>
+	<style>
+      body {
+          background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+      }
+	</style>
+</head>
+<body>
+<div id='svelte'>%svelte.body%</div>
+</body>
 </html>
